plantuml/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantuml
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: plantuml
