plantuml/ingresses.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plantuml
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - uml.vitalbeats.dev
      secretName: plantuml-tls
  rules:
    - host: uml.vitalbeats.dev
      http:
        paths:
          - backend:
              serviceName: plantuml
              servicePort: 80
